tests/transpiler/x/fs/group_by_sort.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(5,5): error FS0010: Unexpected keyword 'val' in field declaration. Expected identifier or other token.

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(9,5): error FS0010: Unexpected keyword 'val' in field declaration. Expected identifier or other token.

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(26,39): error FS0010: Unexpected keyword 'val' in expression. Expected '}' or other token.

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(26,26): error FS0604: Unmatched '{'

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(28,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (27:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(28,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (27:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(29,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (27:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(29,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (27:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(29,13): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (27:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(29,13): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (27:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(29,19): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (27:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(29,19): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (27:29). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(29,72): error FS0599: Missing qualification after '.'

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(29,73): error FS0010: Unexpected keyword 'val' in expression. Expected incomplete structured construct at or before this point or other token.

/workspace/mochi/tests/transpiler/x/fs/group_by_sort.fs(29,45): error FS3106: Unexpected end of input in 'for' expression. Expected 'for <pat> in <expr> do <expr>'.
